--- a/style.css
+++ b/style.css
@@ -9,6 +9,19 @@
     scroll-behavior: smooth;
 }
 
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #76ABAE;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #31363f;
+    width: 50px;
+}
+
 .headerp {
     background-color: #222831;
     width: 100%;
