--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ section {
 .namelink a {
     text-decoration: none;
     border: 1px solid #31363F;
-    padding: 0.7em 1.6em;
+    padding: 0.7em 0.8em;
     background-color: #31363F;
     border-radius: 15px;
     color: #EEEEEE;
@@ -291,14 +291,14 @@ section {
 .contactme {
     min-height: 100vh;
     width: 100%;
-    background-color: #222831;
+    background-color: #31363F;
 }
 
 fieldset {
-    background-color: #31363F;
+    background-color: #222831;
     margin: 1em 0;
     padding: 1em 2em;
-    border: 1px solid #31363F;
+    border: 1px solid #222831;
     border-radius: 15px;
     min-width: 20em;
     transition: 0.5s;
@@ -370,13 +370,20 @@ textarea {
 .extracards {
     min-height: 100vh;
     width: 100%;
+    background-color: #222831;
+
+}
+
+.extracards1 {
+    min-height: 100vh;
+    width: 100%;
     background-color: #31363F;
 
 }
 
 .extracard {
     min-height: 14em;
-    border: 1px solid #31363F;
+    border: 1px solid #222831;
     width: 18em;
     border-radius: 20px;
     overflow: hidden;
@@ -389,6 +396,24 @@ textarea {
 }
 
 .extracard:hover .projectinfo p {
+    color: #EEEEEE;
+}
+
+.extracard1 {
+    min-height: 14em;
+    border: 1px solid #31363F;
+    width: 18em;
+    border-radius: 20px;
+    overflow: hidden;
+    transition: 0.8s ease;
+}
+
+.extracard1:hover {
+    box-shadow: 0px 5px 25px #eeeeee31;
+    transform: scale(1.2);
+}
+
+.extracard1:hover .projectinfo p {
     color: #EEEEEE;
 }
 
@@ -487,4 +512,11 @@ textarea {
     .home img {
         width: 45vh;
     }
+}
+
+.copyright {
+    background-color: #222831;
+    color: #EEEEEE;
+    display: flex;
+    justify-content: center;
 }
